--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,32 @@ wp-config.php
 # htaccess
 /.htaccess
 
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
+
+# Node modules and logs
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Compiled files
+*.zip
+*.tar.gz
+*.rar
+
 # All plugins
 #
 # Note: If you wish to whitelist plugins,
